Removing accidentally added target directories.