@@ -14,6 +14,9 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.source>1.6</java.source>
         <java.target>1.6</java.target>
+        <cobertura.check.haltOnFailure>true</cobertura.check.haltOnFailure>
+        <cobertura.totalBranchRate>92</cobertura.totalBranchRate>
+        <cobertura.totalLineRate>92</cobertura.totalLineRate>
     </properties>
 
     <scm>
@@ -82,6 +85,60 @@
             <url>http://nexus.5amsolutions.com/nexus/content/repositories/snapshots</url>
         </pluginRepository>
     </pluginRepositories>
+    
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>2.3.2</version>
+                    <configuration>
+                        <source>${java.source}</source>
+                        <target>${java.target}</target>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>2.6</version>
+                    <configuration>       
+                        <forkMode>once</forkMode>
+                        <argLine>-Xmx512m -XX:MaxPermSize=256M</argLine>
+                        <includes>
+                            <include>**/*Test.java</include>
+                            <include>**/*TestDb.java</include>
+                        </includes>
+                        <excludes>
+                            <exclude>${maven.surefire.excludes}</exclude>
+                        </excludes>                                                
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>cobertura-maven-plugin</artifactId>
+                    <version>2.5.1</version>
+                    <executions>
+                        <execution>
+                            <goals>
+                                <goal>clean</goal>
+                                <goal>check</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                    <configuration>
+                        <check>
+                            <haltOnFailure>${cobertura.check.haltOnFailure}</haltOnFailure>
+                            <totalBranchRate>${cobertura.totalBranchRate}</totalBranchRate>
+                            <totalLineRate>${cobertura.totalLineRate}</totalLineRate>
+                        </check>
+                    </configuration>
+                </plugin>
+            
+            </plugins>
+        
+        </pluginManagement>
+    
+    </build>
 
     <dependencies>
         <dependency>
